--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <div class="logo-name-container">
                 <div class="logo-container">
-                    <img src="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\Photos\serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
+                    <img src="Photos/serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
                 </div>
                 <h2 id="logo">Adel Matar</h2>
             </div>
@@ -52,7 +52,7 @@
                     <h2>Projects</h2>
                     <div class="project">
                         <h3>My First Project:</h3>
-                        <img class="my-first-project" src="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\Photos\Myfirstproject.png" alt="Project 1">
+                        <img class="Photos/Myfirstproject.png" alt="Project 1">
                         <p>This is actually my first project, the site you are on right now.</p>
                     </div>
                 
