--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\CSS\contact.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\Photos\serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
+                <img src="Photos/serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
                 <h2 id="logo">Adel Matar</h2>
             </div>
             <div class="nav-links-container">
