--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
             </div>
             <div class="nav-links-container">
                 <ul class="navigation-menu">
-                    <li class="navigation-item"><a href="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\index.html#about-me">About Me</a></li>
-                    <li class="navigation-item"><a href="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\index.html#projects">Projects</a></li>
-                    <li class="navigation-item"><a href="C:\Users\a\Desktop\Foldere\IT\CodeAcademy\Portfolio Project\index.html">Main</a></li>
+                    <li class="navigation-item"><a href="index.html#about-me">About Me</a></li>
+                    <li class="navigation-item"><a href="index.html#projects">Projects</a></li>
+                    <li class="navigation-item"><a href="index.html">Main</a></li>
                 </ul>
             </div>
         </header>
