--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h2>Projects</h2>
                     <div class="project">
                         <h3>My First Project:</h3>
-                        <img class="Photos/Myfirstproject.png" href="Photos/Myfirstproject.png" alt="Project 1">
+                        <img class="my-first-project" href="Photos/Myfirstproject.png" alt="Project 1">
                         <p>This is actually my first project, the site you are on right now.</p>
                     </div>
                 
