--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div class="logo-container">
                     <img src="Photos/serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
                 </div>
-                <h2 id="logo">Adel Matar</h2>
+                <h2 id="logo">Jacop Anderson</h2>
             </div>
             <div class="nav-links-container">
                 <ul class="navigation-menu">
@@ -33,7 +33,7 @@
                     <div>
                         <h2>About me</h2>
                         <p>
-                            Hi, I'm Adel Matar, a passionate web developer based in Iasi, Romania. 
+                            Hi, I'm Jacop Anderson, a passionate web developer based in Iasi, Romania. 
                             With a background in computer science and a love for coding, I specialize in creating dynamic and user-friendly websites that leave a lasting impression.
                         </p>
                         <p>
@@ -75,7 +75,7 @@
             <div class="footer-content">
                 <p>Contact me:</p>
                 <ul>
-                    <li>Email: ja4364892@gmail.com</li>
+                    <li>Email: ja31243123@gmail.com</li>
                     <li>Phone: 123-456-7890</li>
                     <li>Address: 132 Vasile Lupu, Iasi, Romania</li>
                 </ul>
