--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <header>
             <div class="logo-container">
                 <img src="Photos/serenity-blue-studios-high-resolution-logo-transparent.png" alt="Logo">
-                <h2 id="logo">Adel Matar</h2>
+                <h2 id="logo">Jacop Anderson</h2>
             </div>
             <div class="nav-links-container">
                 <ul class="navigation-menu">
@@ -44,7 +44,7 @@
             <div class="footer-content">
                 <p>Contact us:</p>
                 <ul>
-                    <li>Email: ja4364892@gmail.com</li>
+                    <li>Email: ja31243123@gmail.com</li>
                     <li>Phone: 123-456-7890</li>
                     <li>Address: 132 Vasile Lupu, Iasi, Romania</li>
                 </ul>
